--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
   <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="/assets/js/script.js"></script>
   <!--JavaScript at end of body for optimized loading-->
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
