--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--Import materialize.css-->
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -19,8 +19,8 @@
       <a href="#!"> <img src="./assets/images/deez.jpeg" width="65" height="65" class="brand-logo"></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
+        <li><a href="#page1">Find my Rep</a></li>
+        <li><a href="https://www.youtube.com/watch?v=9NkkZJHova4">Look at this Graph</a></li>
         <li><a href="collapsible.html">Javascript</a></li>
         <li><a href="mobile.html">Mobile</a></li>
       </ul>
@@ -28,14 +28,14 @@
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
+    <li><a href="#page1">Find my Rep</a></li>
+    <li><a href="https://www.youtube.com/watch?v=9NkkZJHova4">Look at this Graph</a></li>
     <li><a href="collapsible.html">Javascript</a></li>
     <li><a href="mobile.html">Mobile</a></li>
   </ul>
 
 
-  <div style="background-color:#EFE2BA;border-radius:25px; border:2px solid #D2D2D2; padding: 0px 20px 20px 20px; width:400px; font-family: Helvetica,Arial,sans-serif;">
+  <div id="page1" style="background-color:#EFE2BA;border-radius:25px; border:2px solid #D2D2D2; padding: 0px 20px 20px 20px; width:400px; font-family: Helvetica,Arial,sans-serif;">
     <div>
       <h4>Who Represents Me?</h4>
       <div style="width:100%;display:inline-block;">
@@ -58,12 +58,16 @@
     </div>
   </div>
 
+  <div>
+
+  </div>
+
+  <div id="page2">
+    
+  </div>
 
   <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="/assets/js/script.js"></script>
-  <!--JavaScript at end of body for optimized loading-->
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 
 </html>
